--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>learninggithub</title>
 </head>
 <body>
-    hi! i am rajesh anuragi
+    hi! i am Rajesh Anuragi
+    This extra text is to check the changes at github
 </body>
 </html>
