updated some details about the project

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     hi! i am Rajesh Anuragi
     This extra text is to check the changes at github
+    This text is to learn about Branches
 </body>
 </html>
